--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,20 @@ dependencies = [
     "pydantic-settings (>=2.7.1,<3.0.0)",
     "fastapi-mail (>=1.4.2,<2.0.0)",
     "slowapi (>=0.1.9,<0.2.0)",
-    "cloudinary (>=1.42.1,<2.0.0)"
+    "cloudinary (>=1.42.1,<2.0.0)",
+    "pytest (>=8.3.4,<9.0.0)",
+    "pytest-asyncio (>=0.25.3,<0.26.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+pythonpath = "."
+filterwarnings = "ignore::DeprecationWarning"
+asyncio_default_fixture_loop_scope = "function"
+
