--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "cloudinary (>=1.42.1,<2.0.0)",
     "pytest (>=8.3.4,<9.0.0)",
     "pytest-asyncio (>=0.25.3,<0.26.0)",
-    "aiosqlite (>=0.21.0,<0.22.0)"
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "pytest-cov (>=6.0.0,<7.0.0)"
 ]
 
 
