--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "pytest (>=8.3.4,<9.0.0)",
     "pytest-asyncio (>=0.25.3,<0.26.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
-    "pytest-cov (>=6.0.0,<7.0.0)"
+    "pytest-cov (>=6.0.0,<7.0.0)",
+    "redis (>=5.2.1,<6.0.0)"
 ]
 
 
@@ -41,4 +42,5 @@ asyncio_default_fixture_loop_scope = "function"
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "^8.1.3"
+redis = "^5.2.1"
 
